--- a/daili2.yaml
+++ b/daili2.yaml
@@ -35,18 +35,18 @@ dns:
 proxies:
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
-  port: 30003
   type: ss
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 30003
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.84
-  maximum: 9.7
-  average: 7.95
-  UpdateDay: '2022-05-12T00:30:28.421613'
+  minimum: 6.96
+  maximum: 7.93
+  average: 7.36
+  UpdateDay: '2022-05-12T03:35:12.032460'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 49015
+  Rank: 49111
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -55,42 +55,42 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.78
-  maximum: 15.35
-  average: 9.77
-  UpdateDay: '2022-05-11T21:31:31.675510'
+  minimum: 7.8
+  maximum: 13.91
+  average: 9.91
+  UpdateDay: '2022-05-12T03:35:12.044249'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 45654
+  Rank: 45755
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
-  port: 21089
   type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 21089
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.39
-  maximum: 45.28
-  average: 41.48
-  UpdateDay: '2022-05-12T00:30:29.603922'
+  minimum: 18.64
+  maximum: 44.57
+  average: 29.6
+  UpdateDay: '2022-05-12T03:35:12.144951'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 33349
+  Rank: 33430
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
-  port: 1443
   type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
+  country: "\U0001F1EF\U0001F1F5JP"
+  port: 1443
   password: 7x42LetRa0
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 60.25
-  maximum: 97.36
-  average: 72.8
-  UpdateDay: '2022-05-12T00:30:29.860241'
+  minimum: 59.32
+  maximum: 135.14
+  average: 90.44
+  UpdateDay: '2022-05-12T03:35:15.531035'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 32980
+  Rank: 33071
 - name: 101.91.121.247:50004@ss
   type: ss
   server: 101.91.121.247
@@ -103,7 +103,7 @@ proxies:
   average: 10.83
   UpdateDay: '2022-05-10T15:30:34.077769'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 32893
+  Rank: 32743
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   port: 20089
@@ -113,12 +113,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 33.72
-  maximum: 45.79
-  average: 39.34
-  UpdateDay: '2022-05-12T00:30:29.607099'
+  minimum: 16.84
+  maximum: 40.44
+  average: 31.82
+  UpdateDay: '2022-05-12T03:36:43.609901'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 30486
+  Rank: 30581
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -131,7 +131,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 29803
+  Rank: 29903
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -141,42 +141,42 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 74.58
-  maximum: 87.24
-  average: 81.17
-  UpdateDay: '2022-05-12T00:30:29.882039'
+  minimum: 50.57
+  maximum: 51.94
+  average: 51.41
+  UpdateDay: '2022-05-12T03:36:43.675543'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 26913
+  Rank: 27010
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
-  port: 443
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
   password: L1qNeGrY58ApwrRA
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 42.5
-  maximum: 47.97
-  average: 45.86
-  UpdateDay: '2022-05-12T00:30:29.695347'
+  minimum: 40.83
+  maximum: 46.0
+  average: 44.18
+  UpdateDay: '2022-05-12T03:35:15.302594'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 24113
+  Rank: 24214
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
   type: trojan
   country: "\U0001F1F9\U0001F1FC TW"
-  password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
+  password: 7a9a3bb7-43b4YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 89.49
-  maximum: 101.45
-  average: 95.23
-  UpdateDay: '2022-05-12T00:30:31.904380'
+  minimum: 73.26
+  maximum: 81.56
+  average: 76.48
+  UpdateDay: '2022-05-12T03:36:43.754001'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 22946
+  Rank: 22995
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -188,7 +188,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 22864
+  Rank: 22964
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -203,22 +203,22 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 22127
+  Rank: 22222
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
-  port: 443
   type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
+  country: "\U0001F1FA\U0001F1F8US"
+  port: 443
   password: 4f7dc540-d244-4e64-af21-4b5bb300add3
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 70.85
-  maximum: 77.56
-  average: 73.16
-  UpdateDay: '2022-05-12T00:30:32.225725'
+  minimum: 45.91
+  maximum: 47.99
+  average: 46.63
+  UpdateDay: '2022-05-12T03:36:07.596090'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 21363
+  Rank: 21450
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -233,7 +233,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 20597
+  Rank: 20622
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -245,7 +245,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 20485
+  Rank: 20585
 - name: tky3.ssgnode.ga:443@trojan
   server: tky3.ssgnode.ga
   port: 443
@@ -255,12 +255,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.08
-  maximum: 44.11
-  average: 42.19
-  UpdateDay: '2022-05-12T00:30:29.748275'
+  minimum: 41.48
+  maximum: 45.11
+  average: 43.18
+  UpdateDay: '2022-05-12T03:36:43.650492'
   PFirstFoundDay: '2022-05-04T12:30:31.831423'
-  Rank: 18280
+  Rank: 18384
 - name: zgao.shop:443@trojan
   server: zgao.shop
   port: 443
@@ -275,7 +275,7 @@ proxies:
   average: 77.06
   UpdateDay: '2022-03-19T00:36:45.832218'
   PFirstFoundDay: '2022-03-19T00:36:45.832222'
-  Rank: 17324
+  Rank: 17399
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
@@ -285,12 +285,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.38
-  maximum: 48.72
-  average: 46.19
-  UpdateDay: '2022-05-12T00:30:29.609810'
+  minimum: 38.29
+  maximum: 39.89
+  average: 39.11
+  UpdateDay: '2022-05-12T03:36:43.631573'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 17255
+  Rank: 17287
 - alterId: 0
   cipher: auto
   http-opts:
@@ -315,22 +315,22 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 16617
-- name: api.tcpbbr.net:443@trojan
-  server: api.tcpbbr.net
-  type: trojan
-  country: "\U0001F1ED\U0001F1F0HK"
+  Rank: 16667
+- name: ssl.tcpbbr.net:443@trojan
+  server: ssl.tcpbbr.net
   port: 443
-  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
+  type: trojan
+  country: "\U0001F1ED\U0001F1F0 HK"
+  password: 5a3d9b78-cb5b-11ea-82ef-f23c9164ca5d
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 55.95
-  maximum: 1096.22
-  average: 406.01
-  UpdateDay: '2022-05-11T21:31:32.822409'
-  PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 16120
+  minimum: 39.84
+  maximum: 40.38
+  average: 40.08
+  UpdateDay: '2022-05-12T03:36:43.638598'
+  PFirstFoundDay: '2022-03-27T06:36:10.059372'
+  Rank: 16178
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -357,7 +357,7 @@ proxy-groups:
   - zgao.shop:443@trojan
   - jp-tyo-04-tr.cdn.savoy.click:889@trojan
   - 35.153.162.49:27080@vmess
-  - api.tcpbbr.net:443@trojan
+  - ssl.tcpbbr.net:443@trojan
   tolerance: 250
 rules:
 - MATCH,PG-default
