--- a/daili.yaml
+++ b/daili.yaml
@@ -46,7 +46,7 @@ proxies:
   average: 6.73
   UpdateDay: '2022-05-12T15:31:59.389509'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 50276
+  Rank: 50376
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -60,7 +60,7 @@ proxies:
   average: 9.49
   UpdateDay: '2022-05-12T15:30:29.194949'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 46937
+  Rank: 47032
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -75,7 +75,7 @@ proxies:
   average: 31.92
   UpdateDay: '2022-05-12T15:31:59.476242'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 34522
+  Rank: 34602
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -90,7 +90,7 @@ proxies:
   average: 59.82
   UpdateDay: '2022-05-12T15:31:59.563963'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 33982
+  Rank: 34047
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   type: trojan
@@ -105,7 +105,7 @@ proxies:
   average: 23.81
   UpdateDay: '2022-05-12T15:30:29.234708'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 31701
+  Rank: 31796
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -118,7 +118,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 30996
+  Rank: 31067
 - name: 101.91.121.247:50004@ss
   type: ss
   server: 101.91.121.247
@@ -131,7 +131,7 @@ proxies:
   average: 10.83
   UpdateDay: '2022-05-10T15:30:34.077769'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 30943
+  Rank: 30793
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   type: trojan
@@ -146,7 +146,7 @@ proxies:
   average: 95.79
   UpdateDay: '2022-05-12T15:30:32.581832'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 27939
+  Rank: 27989
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   type: trojan
@@ -161,7 +161,7 @@ proxies:
   average: 44.27
   UpdateDay: '2022-05-12T15:30:29.291776'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 25293
+  Rank: 25388
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -173,7 +173,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 24129
+  Rank: 24224
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
@@ -188,7 +188,7 @@ proxies:
   average: 80.35
   UpdateDay: '2022-05-12T15:31:59.695354'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 23553
+  Rank: 23603
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -203,7 +203,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 23382
+  Rank: 23477
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   type: trojan
@@ -218,7 +218,19 @@ proxies:
   average: 55.11
   UpdateDay: '2022-05-12T15:31:23.462634'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 22393
+  Rank: 22469
+- name: www.seetheworldjp.ga:443@trojan
+  password: f42e1a2e-e650-44f4-8d17-bcb68663da18
+  port: 443
+  server: www.seetheworldjp.ga
+  type: trojan
+  success_rate: 100.0
+  minimum: 50.99
+  maximum: 64.88
+  average: 57.86
+  UpdateDay: '2022-04-03T15:12:54.472724'
+  PFirstFoundDay: '2022-03-11T21:01:49.367854'
+  Rank: 21749
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -233,19 +245,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 21676
-- name: www.seetheworldjp.ga:443@trojan
-  password: f42e1a2e-e650-44f4-8d17-bcb68663da18
-  port: 443
-  server: www.seetheworldjp.ga
-  type: trojan
-  success_rate: 100.0
-  minimum: 50.99
-  maximum: 64.88
-  average: 57.86
-  UpdateDay: '2022-04-03T15:12:54.472724'
-  PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 21659
+  Rank: 21746
 - name: tky3.ssgnode.ga:443@trojan
   server: tky3.ssgnode.ga
   port: 443
@@ -260,7 +260,7 @@ proxies:
   average: 41.35
   UpdateDay: '2022-05-12T15:31:59.527411'
   PFirstFoundDay: '2022-05-04T12:30:31.831423'
-  Rank: 19567
+  Rank: 19662
 - name: zgao.shop:443@trojan
   server: zgao.shop
   port: 443
@@ -275,7 +275,7 @@ proxies:
   average: 77.06
   UpdateDay: '2022-03-19T00:36:45.832218'
   PFirstFoundDay: '2022-03-19T00:36:45.832222'
-  Rank: 18539
+  Rank: 18634
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
@@ -290,7 +290,7 @@ proxies:
   average: 41.17
   UpdateDay: '2022-05-12T15:31:59.504169'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 17806
+  Rank: 17856
 - alterId: 0
   cipher: auto
   http-opts:
@@ -315,22 +315,22 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 17051
-- name: ssl.tcpbbr.net:443@trojan
-  server: ssl.tcpbbr.net
-  port: 443
+  Rank: 17073
+- name: 45.9.10.103:443@trojan
+  server: 45.9.10.103
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
-  password: 7b4066ae-accc-11eb-a8bf-f23c91cfbbc9
+  country: "\U0001F1FA\U0001F1F8 US"
+  port: 443
+  password: WpfQAbO2wg
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.41
-  maximum: 40.71
-  average: 40.0
-  UpdateDay: '2022-05-12T09:31:59.911685'
-  PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 16035
+  minimum: 160.41
+  maximum: 164.63
+  average: 162.13
+  UpdateDay: '2022-03-30T11:21:53.634848'
+  PFirstFoundDay: '2022-03-23T09:35:36.105483'
+  Rank: 15923
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -351,13 +351,13 @@ proxy-groups:
   - 2.58.242.43:443@trojan
   - www.gomacau.gq:443@trojan
   - www.tokyo2023.ga:443@trojan
-  - www.tokyo2021.ga:443@trojan
   - www.seetheworldjp.ga:443@trojan
+  - www.tokyo2021.ga:443@trojan
   - tky3.ssgnode.ga:443@trojan
   - zgao.shop:443@trojan
   - jp-tyo-04-tr.cdn.savoy.click:889@trojan
   - 35.153.162.49:27080@vmess
-  - ssl.tcpbbr.net:443@trojan
+  - 45.9.10.103:443@trojan
   tolerance: 250
 rule-providers:
   anting:
