--- a/daili.yaml
+++ b/daili.yaml
@@ -41,12 +41,12 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.6
-  maximum: 6.85
-  average: 6.73
-  UpdateDay: '2022-05-12T15:31:59.389509'
+  minimum: 6.85
+  maximum: 15.71
+  average: 9.86
+  UpdateDay: '2022-05-12T18:33:34.663740'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 50476
+  Rank: 50577
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -60,7 +60,7 @@ proxies:
   average: 9.49
   UpdateDay: '2022-05-12T15:30:29.194949'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 47132
+  Rank: 47232
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -70,12 +70,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 24.33
-  maximum: 39.35
-  average: 31.92
-  UpdateDay: '2022-05-12T15:31:59.476242'
+  minimum: 36.46
+  maximum: 48.5
+  average: 42.61
+  UpdateDay: '2022-05-12T18:33:34.770298'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 34692
+  Rank: 34783
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -85,12 +85,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 59.4
-  maximum: 60.35
-  average: 59.82
-  UpdateDay: '2022-05-12T15:31:59.563963'
+  minimum: 59.35
+  maximum: 59.54
+  average: 59.42
+  UpdateDay: '2022-05-12T18:33:34.815392'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 34102
+  Rank: 34168
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   type: trojan
@@ -105,7 +105,7 @@ proxies:
   average: 23.81
   UpdateDay: '2022-05-12T15:30:29.234708'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 31877
+  Rank: 31958
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -118,7 +118,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 31134
+  Rank: 31216
 - name: 101.91.121.247:50004@ss
   type: ss
   server: 101.91.121.247
@@ -131,37 +131,37 @@ proxies:
   average: 10.83
   UpdateDay: '2022-05-10T15:30:34.077769'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 30643
+  Rank: 30493
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
-  type: trojan
-  country: "\U0001F1EF\U0001F1F5JP"
   port: 443
+  type: trojan
+  country: "\U0001F1EF\U0001F1F5 JP"
   password: 18e513fe-f7f4-353d-84ca-bc9646fb2528mielink
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 91.45
-  maximum: 100.14
-  average: 95.79
-  UpdateDay: '2022-05-12T15:30:32.581832'
+  minimum: 75.04
+  maximum: 122.13
+  average: 94.47
+  UpdateDay: '2022-05-12T18:33:34.936808'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 28035
+  Rank: 28082
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
-  type: trojan
-  country: "\U0001F1ED\U0001F1F0HK"
   port: 443
+  type: trojan
+  country: "\U0001F1ED\U0001F1F0 HK"
   password: L1qNeGrY58ApwrRA
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.27
-  maximum: 47.07
-  average: 44.27
-  UpdateDay: '2022-05-12T15:30:29.291776'
+  minimum: 40.78
+  maximum: 47.06
+  average: 44.42
+  UpdateDay: '2022-05-12T18:33:34.786050'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 25483
+  Rank: 25584
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -173,7 +173,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 24324
+  Rank: 24424
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
@@ -183,12 +183,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 79.56
-  maximum: 81.86
-  average: 80.35
-  UpdateDay: '2022-05-12T15:31:59.695354'
+  minimum: 73.62
+  maximum: 75.14
+  average: 74.36
+  UpdateDay: '2022-05-12T18:33:34.858982'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 23653
+  Rank: 23684
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -203,22 +203,22 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 23572
+  Rank: 23667
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
-  type: trojan
-  country: "\U0001F1FA\U0001F1F8US"
   port: 443
+  type: trojan
+  country: "\U0001F1FA\U0001F1F8 US"
   password: 4f7dc540-d244-4e64-af21-4b5bb300add3
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 44.08
-  maximum: 65.68
-  average: 55.11
-  UpdateDay: '2022-05-12T15:31:23.462634'
+  minimum: 44.38
+  maximum: 54.29
+  average: 48.29
+  UpdateDay: '2022-05-12T18:33:34.779564'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 22564
+  Rank: 22647
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -230,7 +230,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 21839
+  Rank: 21934
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -245,22 +245,22 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 21836
+  Rank: 21916
 - name: tky3.ssgnode.ga:443@trojan
   server: tky3.ssgnode.ga
   port: 443
   type: trojan
   country: "\U0001F1EF\U0001F1F5 JP"
-  password: 82a115db-6e59-4319-9730-8f5638908d59YWVzLTI1Ni1nY2023115_5a451f03
+  password: 82lWNFc1RmRBNk5NQU5KSnga3fa58ac5a3ef0-b4ab-11eb-b65e-1239d0255272
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.53
-  maximum: 41.9
-  average: 41.35
-  UpdateDay: '2022-05-12T15:31:59.527411'
+  minimum: 40.3
+  maximum: 47.97
+  average: 44.87
+  UpdateDay: '2022-05-12T18:33:34.790819'
   PFirstFoundDay: '2022-05-04T12:30:31.831423'
-  Rank: 19757
+  Rank: 19854
 - name: zgao.shop:443@trojan
   server: zgao.shop
   port: 443
@@ -275,22 +275,22 @@ proxies:
   average: 77.06
   UpdateDay: '2022-03-19T00:36:45.832218'
   PFirstFoundDay: '2022-03-19T00:36:45.832222'
-  Rank: 18734
+  Rank: 18829
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
   type: trojan
   country: "\U0001F1E8\U0001F1F3 CN"
-  password: UiLPqefVfielqkDjEwBV
+  password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.46
-  maximum: 45.4
-  average: 41.17
-  UpdateDay: '2022-05-12T15:31:59.504169'
+  minimum: 39.21
+  maximum: 48.45
+  average: 44.38
+  UpdateDay: '2022-05-12T18:33:34.759559'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 17904
+  Rank: 17955
 - alterId: 0
   cipher: auto
   http-opts:
@@ -315,7 +315,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 17099
+  Rank: 17109
 - name: 45.9.10.103:443@trojan
   server: 45.9.10.103
   type: trojan
@@ -330,7 +330,7 @@ proxies:
   average: 162.13
   UpdateDay: '2022-03-30T11:21:53.634848'
   PFirstFoundDay: '2022-03-23T09:35:36.105483'
-  Rank: 15973
+  Rank: 16023
 proxy-groups:
 - name: PG-default
   type: fallback
